; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ocspapitest.c_test_ocsp_url_svcloc_new.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ocspapitest.c_test_ocsp_url_svcloc_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_ocsp_url_svcloc_new.urls = internal global [3 x i8*] [i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i32 0, i32 0), i8* null], align 16
@.str = private unnamed_addr constant [16 x i8] c"www.openssl.org\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"www.openssl.net\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_ocsp_url_svcloc_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_ocsp_url_svcloc_new() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* null, i32** %1, align 8
  store i32* null, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = call i32 @get_cert(i32** %1)
  %5 = call i32 @TEST_true(i32 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  br label %19

8:                                                ; preds = %0
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @X509_get_issuer_name(i32* %9)
  %11 = call i32* @OCSP_url_svcloc_new(i32 %10, i8** getelementptr inbounds ([3 x i8*], [3 x i8*]* @test_ocsp_url_svcloc_new.urls, i64 0, i64 0))
  store i32* %11, i32** %2, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @TEST_ptr(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %8
  br label %19

16:                                               ; preds = %8
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @X509_EXTENSION_free(i32* %17)
  store i32 1, i32* %3, align 4
  br label %19

19:                                               ; preds = %16, %15, %7
  %20 = load i32*, i32** %1, align 8
  %21 = call i32 @X509_free(i32* %20)
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @TEST_true(i32) #1

declare dso_local i32 @get_cert(i32**) #1

declare dso_local i32* @OCSP_url_svcloc_new(i32, i8**) #1

declare dso_local i32 @X509_get_issuer_name(i32*) #1

declare dso_local i32 @TEST_ptr(i32*) #1

declare dso_local i32 @X509_EXTENSION_free(i32*) #1

declare dso_local i32 @X509_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
